syntax = "proto3"; 
package server_example; 

option go_package = "./;main";

message HiddenData {
    string message = 1;
}

message PublicData {
    string message = 1;
}

message NoArguments {}

service ServerExample {
    rpc GetHiddenData(NoArguments) returns (HiddenData) {};
    rpc GetHiddenStreamData(NoArguments) returns (stream HiddenData) {};
    rpc GetPublicData(NoArguments) returns (PublicData) {};
}